# src/routes/category.route.js
@@ -1,13 +1,14 @@
 const router = require('express').Router()
-const categoryController = require('../controllers/categoryController')
+const categoryController = require('../controllers/category.controller')
 const authMiddleware = require("../middlewares/auth.middleware");
+const ROLE = require('../common/role.constant')
 
 /*router.get('/getAll',authMiddleware.isAuthenticated, categoryController.getAllCategories )
 router.post('/create',authMiddleware.isAuthenticated, categoryController.createCategory)
 router.put('/update/:id',authMiddleware.isAuthenticated, categoryController.updateCategory)*/
 //router.delete('/:id', categoryController.deleteCategory)
 
-router.get('/getAll', authMiddleware.isAuthenticated, (req, res) => {
+router.get('/', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROLE.VIEWER,ROLE.EDITOR,ROLE.ADMIN), (req, res) => {
     /**
      * #swagger.tags = ['Categories']
      * #swagger.description = 'Endpoint to get all categories'
@@ -23,7 +24,7 @@ router.get('/getAll', authMiddleware.isAuthenticated, (req, res) => {
     categoryController.getAllCategories(req, res);
 });
 
-router.post('/create', authMiddleware.isAuthenticated, (req, res) => {
+router.post('/', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROLE.EDITOR,ROLE.ADMIN), (req, res) => {
     /**
      * #swagger.tags = ['Categories']
      * #swagger.description = 'Endpoint to create a new category'
@@ -42,7 +43,7 @@ router.post('/create', authMiddleware.isAuthenticated, (req, res) => {
     categoryController.createCategory(req, res);
 });
 
-router.put('/update/:id', authMiddleware.isAuthenticated, (req, res) => {
+router.put('/:id', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROLE.EDITOR,ROLE.ADMIN), (req, res) => {
     /**
      * #swagger.tags = ['Categories']
      * #swagger.description = 'Endpoint to update a category'
@@ -60,6 +61,19 @@ router.put('/update/:id', authMiddleware.isAuthenticated, (req, res) => {
      * }
      */
     categoryController.updateCategory(req, res);
+});
+
+router.delete('/:id', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROLE.EDITOR,ROLE.ADMIN), (req, res) => {
+    /**
+     * #swagger.tags = ['Categories']
+     * #swagger.description = 'Endpoint to delete a category'
+     * #swagger.security = [{ "bearerAuth": [] }]
+     * #swagger.parameters['id'] = { description: 'Category ID' }
+     * #swagger.responses[204] = {
+     *   description: 'Category deleted successfully'
+     * }
+     */
+    categoryController.deleteCategory(req, res);
 });
 
 
